[package]
name = "zippa"
version = "0.1.1"
edition = "2021"
authors = ["Baba Ali"]
exclude = ["*.zip", "sample/*"]

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
zip = "0.6.3"
tempfile = "3.2.0"
colored = "2.1.0"
indicatif = "0.17.8"

[target.'cfg(target_os = "linux")']
linker = "x86_64-linux-gnu-gcc"
rustflags = ["-C", "link-arg=-s"]

[target.'cfg(target_os = "windows")']
linker = "x86_64-w64-mingw32-gcc"
rustflags = ["-C", "link-arg=-s"]
